<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_elderly"
    tools:context="com.cmu.jaylerr.dolaecareme.center.views.auth.ElderlySignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_auth_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_logo"/>
        <TextView
            android:id="@+id/txt_title"
            android:layout_below="@id/img_auth_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:padding="5dp"
            android:text="@string/auth_message_user_gmail"/>

        <EditText
            android:text="@string/app_name"
            android:id="@+id/edt_elderly_username"
            android:layout_below="@id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textAlignment="center"
            android:inputType="textAutoComplete"
            style="@style/button_square_style"
            android:hint="@string/auth_message_username"/>

        <EditText
            android:text="@string/app_name"
            android:id="@+id/edt_elderly_serial_number"
            android:layout_below="@+id/edt_elderly_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textAlignment="center"
            android:inputType="text"
            style="@style/button_square_style"
            android:hint="@string/auth_message_machine_serial_number"/>

        <Button
            android:id="@+id/btn_elderly_create"
            android:layout_below="@+id/edt_elderly_serial_number"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            style="@style/button_round_style"
            android:text="@string/auth_message_create"/>

        <TextView
            android:id="@+id/txt_back"
            android:text="@string/message_back"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</FrameLayout>
