<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/dialog_base_style"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_call"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_bottom_left_round"
                android:clickable="true"
                android:text="@string/app_message_call"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_cctv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_bottom"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:text="@string/app_message_cctv"/>

            <Button
                android:id="@+id/btn_dismiss"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_bottom_right_round"
                style="?android:attr/buttonBarButtonStyle"
                android:clickable="true"
                android:text="@string/app_message_dismiss"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>