<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmu.jaylerr.dolaecareme.center.views.auth.BaseAuthFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_auth">
        <RelativeLayout
            android:id="@+id/relative_descendant"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_alignParentTop="true">
            <ImageView
                android:id="@+id/img_descendant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingTop="70dp"
                android:paddingBottom="70dp"
                android:paddingEnd="20dp"
                android:paddingStart="70dp"
                android:src="@drawable/young"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="65dp"
                android:textStyle="bold"
                android:text="@string/auth_message_i_am_descendant"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_elderly"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true">
            <ImageView
                android:id="@+id/img_elderly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="70dp"
                android:paddingBottom="70dp"
                android:paddingEnd="70dp"
                android:paddingStart="20dp"
                android:src="@drawable/old"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="70dp"
            android:textStyle="bold"
            android:text="@string/auth_message_i_am_elderly"/>
        <TextView
            android:id="@+id/txt_language_setting"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/app_message_language"/>
    </RelativeLayout>

</FrameLayout>